# data-engineer-final-project

./: .env.example  .env.local  .gitignore  Makefile  README.md  bootstrap.sh  pyproject.toml
geojsons/: streets_colored.geojson
infra/docker/: README.md  base-python.Dockerfile  compose.dev.yml  service.Dockerfile
infra/k8s/: namespaces.yaml
infra/k8s/services/: admin.yaml  api.yaml  app.yaml  expander.yaml  geocoder.yaml  indexer.yaml  parser.yaml  scraper.yaml
src/services/admin/: app.py  control.py  demo_multi_cards.py
src/services/api/: app.py
src/services/app/srteamlit/: try.py
src/services/app/streamlit/: app.py  input.py  main.py  search_map_2.py  search_suggestion.py  try.py  yakov.py
src/services/expander/: app.py  expander_service_readme.md  manager_buildings.py  manager_streets.py  service.py  streets_building.py  streets_parser.py
src/services/geocoder/: app.py  service.py  בת ים.csv  גבעת זאב.csv  הרצליה.csv  חדרה.csv  חולון.csv  יבנה.csv  יהוד-מונוסון.csv
src/services/indexer/: app.py
src/services/parser/: app.py  city_parser.py  manager_city.py  parser_service_readme.md
src/services/scraper/: app.py  manager.py
src/services/scraper_2/: app.py  manager_utils.py
src/shared/api_template/: __init__.py  base_service.py
src/shared/clients/: __init__.py
src/shared/config/: settings.py
src/shared/dal/: __init__.py  elastic.py  gridfs.py  kafka.py  mongo.py  mongo2.py
src/shared/logging/: __init__.py  logger.py
src/shared/messaging/: __init__.py
src/shared/utils/: __init__.py
tmp/: data.html
(+24 files in other folders)
